# sealtrust-enclave

./: .env.example  .gitignore  Cargo.toml  Makefile.aws  PROJECT_STRUCTURE.md  README.md  allowed_endpoints.yaml  user-data.sh
docker/: Containerfile.aws  Dockerfile.dev  docker-compose.yml
docs/: AWS_DEPLOYMENT.md  AWS_DEPLOYMENT_SUMMARY.md  DEPLOYMENT_INFO.md  GETTING_STARTED.md  LOCAL_DEV_SETUP.md
scripts/: expose_enclave.sh  register_enclave.sh  run.sh  setup-aws.sh  setup-local.sh  setup.sh
src/: lib.rs  main.rs
src/aws/: Cargo.toml
src/init/: Cargo.toml
src/system/: Cargo.toml
