[package]
name = "truthmarket-nautilus"
version = "0.1.0"
edition = "2021"

[lib]
name = "truthmarket_nautilus"
path = "src/lib.rs"

[[bin]]
name = "nautilus-server"
path = "src/main.rs"

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_bytes = "0.11"
serde_repr = "0.1"
tokio = { version = "1.43.0", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.3"
axum = { version = "0.7", features = ["macros"] }
reqwest = { version = "0.11", features = ["json"] }
anyhow = "1.0"
serde_yaml = "0.9.34"
fastcrypto = { git = "https://github.com/MystenLabs/fastcrypto", rev = "d1fcb853196c3de7888ed8fad74f419b8c8fbe3b" }
nsm_api = { git = "https://github.com/aws/aws-nitro-enclaves-nsm-api.git/", rev = "8ec7eac72bbb2097f1058ee32c13e1ff232f13e8", package="aws-nitro-enclaves-nsm-api" }
bcs = "0.1.6"
sha2 = "0.10"
hex = "0.4"
rand = "0.8"
hyper = { version = "0.14", features = ["full"] }
tower-http = { version = "0.5", features = ["cors"] }
